# livetxt

./: CHANGELOG.md  COMMERCIAL-LICENSE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  WARP.md  pyproject.toml  ruff.toml  setup_env.sh
examples/: README.md  __init__.py
examples/customer-support/: __init__.py  customer_support_agent.py  test_customer_support.py
examples/drive-thru/: test_agent.py
examples/smart-home/: __init__.py  smart_home_agent.py  test_smart_home.py
examples/weather-agent/: __init__.py  test_weather_agent.py  weather_agent.py
examples/zero-code-example/: README.md  my_agent.py
livetxt/: __init__.py  cli.py  client.py  config.py  http_server.py  loader.py  models.py  runtime.py  serialization.py  session_wrapper.py  worker.py
livetxt/shim/: __init__.py  auto_patch.py  context.py  patch.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_livekit_examples.py  test_models.py  test_multi_agent.py  test_runtime.py  test_weather_agent.py
tests/fixtures/: __init__.py  weather_agent.py
tests/helpers/: __init__.py  mock_helpers.py  test_utils.py
tests/unit/: test_serialization.py  test_serialization_simple.py
